# OpenCVApp

./: CMakeLists.txt  main.cpp
lib/OpenCVOp/: Base.cpp  Base.h  OpencvTest.cpp  OpencvTest.h
